--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+}
+
+* {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,13 +22,29 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: F2F2F0;
   font-family: Arial, Helvetica, sans-serif;
+  /* overflow: hidden; */
 }
+
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.fade {
+  animation: fade 0.2s ease-in-out both;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
