--- a/src/app/Todo/todo.css
+++ b/src/app/Todo/todo.css
@@ -43,7 +43,7 @@
     border: 1px solid #000000;
     border-radius: 10px;
     background-color: rgb(235, 237, 239);
-    z-index: 0;
+    
 }
 
 #task {
@@ -72,8 +72,11 @@
     height: 350px;
     background-color: rgb(235, 237, 239);
     overflow: scroll;
+    scrollbar-width: none;
 }
-
+.todo-body::-webkit-scrollbar {
+    display: none;
+}
 .todo-item {
     margin: 2px;
     padding: 15px;
@@ -102,7 +105,7 @@
     top: 10px;
     right: 10px;
     display: inline-block;
-    z-index: 100;
+    
 }
 .menu-content {
     display: none;
@@ -112,7 +115,7 @@
     background-color: white;
     border: 1px solid #ddd;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    
     padding: 10px;
     border-radius: 5px;
 }
@@ -161,4 +164,25 @@
   
     padding: 8px;
     
+}
+#modal{
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+    backdrop-filter: blur(8px);
+}
+#modal-content{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+   
+    scrollbar-width: none;
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+#modal::-webkit-scrollbar {
+    display: none;
+}
+#modal-content input{
+    color: black;
 }
