--- a/src/app/Notes/note.css
+++ b/src/app/Notes/note.css
@@ -75,7 +75,20 @@
 .tag-button:hover {
     background-color: #626458;
 }
-
+.tag-list{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+.tag-item{
+    background-color: #a6a6a3;
+    color: white;
+    padding: 5px ;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+}
 
 .key {
     background-color: gray;
@@ -167,6 +180,8 @@
 
 .div2 {
     display: flex;
+    justify-content: space-between;
+    margin-right: 25px;
 }
 
 .time {
